# AdapterSlotsPlusPlus

./: .gitignore  .gitmodules  LICENSE  README.md  REPRODUCIBILITY.md  pyproject.toml  requirements.txt  run_all.sh  setup.py
.github/workflows/: ci.yml
benchmarks/e2e/: ablate_draft_latency.py  ablate_draft_size.py  accept_ci.py  across_models_13b.py  apply_kernel_13b.py  batch_scaling.py  batched_spec_loop.py  distill.py  graph_latency.py  (+18 more)
lora_warp_pipe/: __init__.py  config.py  engine.py  punica_wrapper.py  scheduler_bridge.py
results/: ablate_draft_latency_20260705_022642.json  ablate_draft_size_gsm8k_20260705_012612.json  accept_ci_20260705_022303.json  across_models_13b_gsm8k_20260704_000006.json  across_models_13b_sharegpt_20260704_011927.json  batch_scaling_20260701_220028.json  distill_20260701_101452.json  distill_20260701_211748.json  distill_20260701_212001.json  distill_amortize_gsm8k_20260705_005142.json  draft_sgmv_20260701_094200.json  draft_sgmv_20260701_094346.json  eagle_medusa_cost_20260705_001132.json  eagle_medusa_cost_20260705_001339.json  faithful_floor_20260703_012500.json  faithful_floor_20260703_100137.json  generalization_20260703_002318.json  graph_latency_20260701_220856.json  graph_latency_20260701_221452.json  multitenant_matrix_20260702_194220.json  multitenant_matrix_20260702_200206.json  multitenant_matrix_20260702_203035.json  multitenant_matrix_20260702_233308.json  multitenant_matrix_20260707_231524.json  recipe_20260701_223039.json  recipe_20260701_224005.json  recipe_20260702_093409.json  serve_kv_eager_20260705_105556.json  serve_kv_eager_20260705_110946.json  serve_kv_eager_20260707_232142.json  serve_kv_graph_20260705_113858.json  serve_kv_graph_20260705_114700.json  serve_kv_graph_20260707_232757.json  serve_mixed_traffic_20260714_084820.json  serve_multitenant_20260701_212932.json  serve_multitenant_20260701_213317.json  serve_multitenant_20260707_224433.json  spec_loops_20260701_214450.json  spec_loops_20260701_215153.json  spec_loops_20260705_105314.json  (+17 more)
scripts/: download_models.sh  run_tests.sh
(+47 files in other folders)
